fixed scrollbar

--- a/deploy/web/gameapp/src/styles.css
+++ b/deploy/web/gameapp/src/styles.css
@@ -9,6 +9,16 @@ body {
   background-color: black;
   overflow-y: hidden;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+div::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+div {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 #helpmode {
   cursor: help;
 }
